--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -54,9 +54,19 @@ ul.index_list {
 	display: inline-block;}
 
 ul.index_list li{
-    display: inline-block;
+  display: inline-block;
 	width: 33%;
-	}
+	height:auto;
+	-webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  position:relative;
+  z-index:1;
+}
+
+ul.index_list li:hover {
+  width:37%;
+}
+
 
 ul.index_list li span{	
 	display: block;
@@ -64,6 +74,9 @@ ul.index_list li span{
 
 ul.index_list li img{
 	width: 100%;
+	height:auto;
+	-webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
 }
 
 a {
