--- a/app/views/samurais/show.html.erb
+++ b/app/views/samurais/show.html.erb
@@ -13,6 +13,9 @@
     <p><%= link_to '編集', "/samurais/#{@samurai.id}/edit", method: :get %></p>
     <p><%= link_to '削除', "/samurais/#{@samurai.id}", method: :delete %></p>
     
+    <div><p><a href="/">最初のページに戻る</a></p></div>
+    
+    
     <div class="container"> 
     <h3>コメントを投稿してね</h3>
     <!-- ここからフォーム -->
