--- a/app/views/samurais/index.html.erb
+++ b/app/views/samurais/index.html.erb
@@ -18,59 +18,6 @@
 
 
 
-
-
-
-
-<div>
-      <h1>親友にしたい武将ランキング</h1>
-      <ul>
-      
-      <li>
-      <span>１位</span>
-      <p>名前</p>
-      <p>画像</p>
-      </li>
-      <li>
-      <span>１位</span>
-      <p>名前</p>
-      <p>画像</p>
-      </li>
-      <li>
-      <span>１位</span>
-      <p>名前</p>
-      <p>画像</p>
-      </li>
-      
-      
-      </ul>
-      <p>投票&結果を見る</p>
-</div>
-
-
-<div>
-      <h1>上司にしたい武将ランキング</h1>
-      <ul>
-      
-      <li>
-      <span>１位</span>
-      <p>名前</p>
-      <p>画像</p>
-      </li>
-      <li>
-      <span>１位</span>
-      <p>名前</p>
-      <p>画像</p>
-      </li>
-      <li>
-      <span>１位</span>
-      <p>名前</p>
-      <p>画像</p>
-      </li>
-      
-      
-      </ul>
-      <p>投票&結果を見る</p>
-</div>
+<%= render partial: "questions/question" %>
 
 </div>
