--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,8 +7,10 @@
       <%= f.collection_radio_buttons(:samurai_id, Samurai.all, :id, :name) do |b| %>
         <%= b.label {b.radio_button + b.text} %>
       <% end %>
-      <%= f.submit "回答する" %>
+      <%= f.submit "回答する" %> 
       
       <% end %>
-      
+      <!--<a href="/questions/#{@answer.question.id}/answers">回答せずに答えを見る</a>-->
+      <p><%= link_to '回答せずに結果を見る', "/questions/#{@question.id}/answers", method: :get %></p>
+   
 </div>
