--- a/app/views/samurais/index.html.erb
+++ b/app/views/samurais/index.html.erb
@@ -9,6 +9,18 @@
             <span><%= simple_format(samurai.name) %></span>
             </a>
 
+<h1><%= samurai.name %>の特徴</h1>
+    <p class="portrait_left"><img src="<%= samurai.portrait.url(:medium) %>"></p>
+    <div class="detail">
+    <h2>出生年</h2>
+    <p><%= samurai.year %>年</p>
+    <h2>出来事</h2>
+    <p><%= samurai.text %></p>
+    </div>
+
+
+
+
     </li>
 
 <% end %>
@@ -16,6 +28,26 @@
 </ul>
 
 
+
+<!-- <div class="modal fade" id="sampleModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+        <h4 class="modal-title">タイトル</h4>
+      </div>
+      <div class="modal-body">
+        本文
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+        <button type="button" class="btn btn-primary">ボタン</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+ -->
 
 
 <%= render partial: "questions/question" %>
