--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,28 +19,28 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
+    <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet" />
+
 </head>
 
 <body>
     <header class="header">
       
       <div class="header__bar row">
-        <h1 class="grid-6"><a href="/">戦国武将.com</a></h1>
+        <h1><a href="/">勝手に戦国武将ランキング</a></h1>
         
         
         
-        <div class="grid-6">
-          <a class="post" href="/samurais/new">投稿する</a>
-        </div>
+        <!--<div class="grid-6">-->
+        <!--  <a class="post" href="/samurais/new">投稿する</a>-->
+        <!--</div>-->
       </div>
     </header>
 
     <%= yield %>
 
     <footer>
-      <p>
-        Copyright samuraibattle.
-      </p>
+      <p>Copyright 勝手に戦国武将ランキング</p>
     </footer>
   </body>
 </html>
