--- a/app/assets/stylesheets/answers.css.scss
+++ b/app/assets/stylesheets/answers.css.scss
@@ -3,3 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 li{list-style:none;}
+
+.answer.inner{
+text-align: center;
+background:none;
+padding-bottom: 0;
+}
