--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -1,15 +1,27 @@
-<div class ="contents row">
-    <h1><%= @question.text %> 回答一覧</h1>
-        
-  
-          <% @ranking.each.with_index(1) do |rank, i| %>
-          <li>
-          <p>
-            <span><%= i %></span>位　<%= rank[:samurai_name] %> <%= rank[:vote_num] %>票
-          </p>
-             
-          </li>
-          <% end %>
-          <p><a href="/">一番最初のページに戻る</a></p>
-    
+<div class ="answer inner">
+    <h2><%= @question.text %>戦国武将回答一覧</h2>
+
+
+          <% if @answers.present? %>
+
+            <% @ranking.each.with_index(1) do |rank, i| %>
+            <li>
+            <p>
+              <span><%= i %></span>位　<%= rank[:samurai_name] %> <%= rank[:vote_num] %>票<br>
+              <!-- <img src="<%= rank[:samurai_img] %>" alt=""> -->
+            </p>
+
+            </li>
+
+            <% end %>
+
+            <% else %>
+              <p>まだ投稿がありません。</p>
+            <% end %>
+
+
+
+
+          <p class="btn"><a href="/">一番最初のページに戻る</a></p>
+
 </div>
