--- a/app/assets/stylesheets/setting.css
+++ b/app/assets/stylesheets/setting.css
@@ -51,7 +51,7 @@ template {
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom. */
 html {
-  font-family: sans-serif;
+  /*font-family: sans-serif;*/
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 2 */
@@ -94,7 +94,6 @@ a:hover {
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari 5, and Chrome. */
 h1 {
-  font-size: 2em;
   margin: 0.67em 0;
 }
 
@@ -458,7 +457,7 @@ ul li {
   margin: 0;
 }
 
-.row {
+/*.row {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -601,12 +600,12 @@ ul li {
   }
 }
 /* max-width 640px, mobile-only styles, use when QAing mobile issues */
-@media only screen and (min-width: 40.063em) and (max-width: 64em) {
+/*@media only screen and (min-width: 40.063em) and (max-width: 64em) {
   .row .grid-1,
   .row .grid-2,
   .row .grid-3,
   .row .grid-4 {
     width: 48.2% !important;
   }
-}
+}*/
 /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
