--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,318 +1,163 @@
 @import "compass";
 
-// html { font-size: 62.5%; } 
-// body { font-size: 1.4rem; } 
-
-// @import url(http://fonts.googleapis.com/css?family=Unica+One);
-body { font-family: "Hannari"; }
-
-$accent: #57C3E9;
-$black: #292929;
-$dark: #666;
-$darkGray: #999999;
-$gray: #D8D8D8;
-$lightGray: #f5f5f3;
-$white: white;
-
-//mixin
-@mixin boxBase($margin: 30px auto, $padding: 10px) {
-  margin: $margin;
-  padding: $padding;
-}
-@mixin basePadding($padding: 10px) {
-  padding: $padding;
-}
-@mixin baseMargin($margin: 10px auto) {
-  margin: $margin;
+@font-face {
+font-family: 'rii';
+src:font-url('riit.woff') format('woff');
 }
 
 body,html {
   height: 100%;
-  // background-color: $lightGray;
   background-image: image-url("bg_motonari.png");
 }
 
-body {
-  // padding-top: 60px;
+body{
+  padding: 1.2rem 1rem 2rem 1rem;
+   -webkit-font-smoothing: antialiased;
 }
 
 h1,h2,h3,h4,h5,h6,body {
-line-height: 1.57;
-  letter-spacing: 0.15em;
-  font-size: 16px;
-  color: $dark;
-  // font-family: 'Unica One', "Avenir", "游ゴシック", "YuGothic", "ヒラギノ角ゴ Pro W6", "HIragino Kaku Gothic Pro W6", "HIragino Kaku Gothic Pro", Osaka, Meiryo, "メイリオ", "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
+// line-height: 1.57;
+  letter-spacing: 0.15rem;
+  font-weight:nomal;
+  color: #000;
   margin: 0;
 }
 
-h1  { font-size: 2.4rem; 
-	font-family: "Sawarabi Gothic";
-	text-align:center; }
-
-ul.index_list {
-	list-style-type: none;
-	margin-top:2em;
-	padding-left: 0;
-	text-align: center;
-	display: inline-block;}
-
-ul.index_list li{
-  display: inline-block;
-  position:relative;
-  z-index:1;
-	width: 32%;
-	-webkit-transform: rotate(0) scale(1);
-  transform: rotate(0) scale(1);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
+.wrapper{
+  background: image-url("img_accent.png") right 0.5rem no-repeat;
+  background-size: 25%;
+  padding: 1.3rem 0 0 0;
+}
+.inner{
+  margin-top: 1rem;
 }
 
-ul.index_list li:hover {
-  z-index:2;
-  -webkit-transform: rotate(15deg) scale(1.4);
-  transform: rotate(15deg) scale(1.4);
-  span{
-    line-height:0;
-  }
-  
+.header h1  {
+  font-size: 2.2rem;
+  line-height: 1.2;
+	font-family: "rii";
+  font-weight: normal;
+	text-align:center;
+  color:#000102;
 }
 
+.header h1  a{
+ color:#000102;
+ }
 
-ul.index_list li span{	
-	display: block;
-}
-
-ul.index_list li img{
-	width: 100%;
-	height:auto;
-	-webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-}
+// .contents p{
+//   font-size: 0.8rem;
+// }
 
 a {
   text-decoration: none;
-  color: $dark;
-  // @extend .transition;
-  // &:hover {
-  //   color: $accent;
-  // }
-}
-
-.btn {
-    @include basePadding(8px 20px);
-    font-size: 14px;
-    border: 2px solid $accent;
-    color: $accent;
-    font-weight: bold;
-    text-align: center;
-    border-radius: 3px;
-    display: inline-block;
-  &:hover {
-    border-color: lighten($accent, 15%);
-    color: lighten($accent, 15%);
-  }
 }
 
 
-.title {
-  font-weight: bold;
-}
 
-.title--big {
-  font-size: 1.5em;
-  font-weight: bold;
-  i {
-    font-style: italic;
-    font-size: 1.8em;
-  }
-}
+// showページ(モーダル)
 
-// header.header {
-//   @include basePadding;
-//   border-bottom: 1px solid $gray;
-//   background-color: #fff;
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   right: 0;
-//   z-index: 5;
-//   div.header__bar.row {
-//     position: relative;
-//     h1.grid-6 {
-//       font-size: 20px;
-//       line-height: 41px;
-//       float: left;
-//       a {
-//         display: block;
-//       }
-//     }
-//     div.grid-6 {
-//       float: right;
-//       text-align: right;
-//       a.post {
-//         @extend .btn;
-//         width: 120px;
-//         display: inline-left;
-//         margin-left: 10px;
-//       }
-//     }
-//   }
-// }
-
-// contents.row
-
-div.contents.row{
-  h2 {
-    @include boxBase(20px 0, 0);
-    font-weight: normal;
-    strong {
-      font-weight: bold;
-      padding-right: 5px;
-      font-size: 1.2em;
-    }
-  }
-  .new_user{
-  font-family: "游ゴシック", "YuGothic";
-  }
-    // p {
-    //   @extend .serif;
-    //   position: absolute;
-    //   left: 30px;
-    //   right: 100px;
-    //   bottom: 30px;
-    //   margin: 0;
-    //   font-size: 20px;
-    //   z-index: 2;
-    //   font-weight: bold;
-    //   text-shadow: 0 0 2px #000, 0 0 1px #000, 0 0 1px #000;
-    // }
-    // span.name {
-    //   position: absolute;
-    //   right: 30px;
-    //   bottom: 30px;
-    //   z-index: 2;
-    //   font-size: 13px;
-    //   a {
-    //     display: block;
-    //     color: #aaa;
-    //     &:hover {
-    //       text-decoration: underline;
-    //       color: #aaa;
-    //     }
-    //   }
-    //   span {
-    //     font-size: 9px;
-    //     display: block;
-    //   }
-    // }
-  // }
-.success {
-    @include boxBase(20px 0 ,30px);
-    box-shadow: 0 0 10px rgba($black,0.2);
-    background-color: $white;
-    box-sizing: border-box;
-    text-align: center;
-    h3 {
-      @include baseMargin;
-    }
-  }
-}
-
-// showページ
-
-
-.container {
-  @include boxBase(20px 0 ,30px);
-  box-shadow: 0 0 10px rgba($black,0.2);
-  background-color: $white;
-  box-sizing: border-box;
-  clear:both;
-}
-.comments {
-  padding: 5px;
-  margin-top: 15px;
-  a {
-    color: $accent;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
   div.content_post {
-    @include boxBase(20px 0 ,30px);
     position: relative;
-    // height: 400px;
-    // color: #fff;
-    // background-size: cover;
-    // background-position: center center;
-    // border-radius: 3px;
-    // box-shadow: 0 0 10px rgba($black,0.2);
-    // &:after {
-    //   content: '';
-    //   position: absolute;
-    //   top: 0;
-    //   bottom: 0;
-    //   left: 0;
-    //   right: 0;
-    //   @include filter-gradient(#000000, #a60000, vertical);
-    //   @include background-image(linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) 62%,rgba(0,0,0,0.85) 100%));
-    //   z-index: 1;
-    //   border-radius: 3px;
-    // }
+    background:#fff;
+    width: 90%;
+    margin: 10px auto;
+    text-align: center;
+    max-width: 700px;
+    padding: 20px 20px 0 20px;
+    overflow:hidden;
+    opacity: 0.9;
+    filter: alpha(opacity=9); /* For IE8 and earlier */
+img{ width: 80%;}
+
+.year{
+  padding-bottom: 0.25rem;
+  background-image: image-url("line_dott.png") ;
+  background-position: bottom;
+  background-repeat: repeat-x;
+
+
+ .ttl{
+     float: left;
+     margin-right: 1rem;
+     font-family: "rii";
+   }
+}
+
+.txt{
+  margin-top: 0.4rem;
+  font-size: 0.9rem;
+}
 }
 
 .portrait_left{
   float:left;
 }
 div.detail{
+  clear: both;
   padding:10px 0 0 0;
-}
-div.contents.row .detail h2{
-margin:10px 0 0 0;
-padding:0;
+  text-align: left;
 }
 
-div.contents.row .detail p{
-  margin:0;
-  padding:0;
+div.content_post h1{
+  background-color: #351c05;
+color: #fff;
+font-family: "rii";
+font-size: 5vw;
+padding: 0.2rem 0;
+margin-bottom: 0.3rem;
+line-height: 1.3rem;}
+
+
+.popup-modal-dismiss{
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  font-family: "rii";
+  padding: 0.1rem 0;
+  border: 0.1rem solid #351c05;
+  border-radius: 0.2rem;
+  a{
+    color: #351c05;
+    font-size: 5vw;
+  }
 }
-
-
 // form
 
 form{
-  h3 {
-    @include baseMargin(0 0 20px);
-    text-align: center;
-    font-weight: normal;
-    font-size: 20px;
-    color: $dark;
-  }
-  input,textarea {
-    // width: 100%;
-    @include boxBase(5px 0 15px,10px);
-    border: 1px solid $gray;
-    border-radius: 5px;
-    font-family: "游ゴシック", "YuGothic";
-  }
   input[type="submit"] {
-    @extend .transition;
-    background-color: $accent;
-    border-radius: 20px;
-    color: #fff;
-    border: 0;
-    font-size: 18px;
-    &:hover {
-      background-color: lighten($accent, 10%);
-    }
+    // @extend .transition;
+    // background-color: #57C3E9;
+    // border-radius: 20px;
+    // color: #fff;
+    // border: 0;
+    // font-size: 18px;
+    // &:hover {
+    //   background-color: lighten(#57C3E9, 10%);
+    // }
+     font-family: "rii";
+    //  line-height: 1.6;
+      color: #fff;
+      background: #981c1c;
+      width: 100%;
+      margin-top: 0.6rem;
+      // float: right;
+      border: 0;
+      border-radius:0.5rem;
+      letter-spacing: 0.1rem;
+      font-size: 5vw;
+      padding: 0.55rem 0;
+      // padding: 0.02rem 0.02rem 0.03rem 0.02rem;
+
   }
 }
 
 
 // footer
 footer {
-  @include boxBase;
-  color: $gray;
+  font-size: 0.6rem;
+  clear: both;
+  color: #333;
+  margin-bottom: 1rem;
   p {
     text-align: center;
   }
