--- a/app/views/samurais/index.html.erb
+++ b/app/views/samurais/index.html.erb
@@ -1,55 +1,53 @@
-<div class ="contents row">
-      <ul class="index_list">
+<div class ="contents">
+
+
+<section class="intro">
+<h2>勝手に戦国武将ランキングについて</h2>
+<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+</section>
+
+
+<section class="lineup">
+<h2>戦国武将たち</h2>
+
+<ul class="index_list">
 
 <% @samurais.each do |samurai| %>
 
-      <li>
-            <a href="/samurais/<%= samurai.id %>">
-            <img src="<%= samurai.portrait.url(:medium) %>" alt="">
-            <span><%= simple_format(samurai.name) %></span>
-            </a>
+<li>
+   <a class="popup-modal" href="#inline-wrap-<%= samurai.id %>">
+   <img src="<%= samurai.portrait.url(:medium) %>" alt="">
+   <span class="name"><%= samurai.name %></span>
+   <span class="btn">見る</span>
+   </a>
 
-<h1><%= samurai.name %>の特徴</h1>
+
+<div id="inline-wrap-<%= samurai.id %>" class="mfp-hide content_post">
+    <h1>第<%= samurai.id %>枠　<%= samurai.name %></h1>
     <p class="portrait_left"><img src="<%= samurai.portrait.url(:medium) %>"></p>
+
+
     <div class="detail">
-    <h2>出生年</h2>
+    <div class="year">
+    <h2 class="ttl">出生年</h2>
     <p><%= samurai.year %>年</p>
-    <h2>出来事</h2>
-    <p><%= samurai.text %></p>
-    </div>
+   </div>
+    <p class="txt"><%= samurai.text %></p>
+   </div>
 
-
-
-
-    </li>
+<p class="popup-modal-dismiss"><a href="#">閉じる</a></p>
+</div>
+</li>
 
 <% end %>
 
 </ul>
+</section>
 
-
-
-<!-- <div class="modal fade" id="sampleModal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-        <h4 class="modal-title">タイトル</h4>
-      </div>
-      <div class="modal-body">
-        本文
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
-        <button type="button" class="btn btn-primary">ボタン</button>
-      </div>
-    </div>
-  </div>
-</div>
-
- -->
-
+<section class="question">
+  <h2>質問に回答する</h2>
 
 <%= render partial: "questions/question" %>
+</section>
 
 </div>
