--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
       })();
     </script>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
+<%= analytics_init if Rails.env.production? %>
 </head>
 
 <body>
@@ -28,13 +28,7 @@
 <div class="wrapper">
     <header class="header">
 
-
         <h1><a href="/">勝手に戦国武将<br class="breath">ランキング</a></h1>
-
-
-        <!--<div class="grid-6">-->
-        <!--  <a class="post" href="/samurais/new">投稿する</a>-->
-        <!--</div>-->
 
     </header>
 
@@ -46,5 +40,7 @@
 
 
 </div>
+
+
   </body>
 </html>
