--- a/app/views/samurais/index.html.erb
+++ b/app/views/samurais/index.html.erb
@@ -14,7 +14,7 @@
 
 <% @samurais.each do |samurai| %>
 
-<li>
+<li class="wow">
    <a class="popup-modal" href="#inline-wrap-<%= samurai.id %>">
    <img src="<%= samurai.portrait.url(:medium) %>" alt="">
    <span class="name"><%= samurai.name %></span>
