--- a/app/assets/stylesheets/answers.css.scss
+++ b/app/assets/stylesheets/answers.css.scss
@@ -3,9 +3,86 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 li{list-style:none;}
+ul.answer_list li:nth-child(2n){
+// margin-left: 2%;
+}
+ul.answer_list {
+list-style-type: none;
+margin-top: 1rem;
+padding-left: 0;
+text-align: left;
+font-size: 0;
+overflow: hidden;
 
-.answer.inner{
+li{
+margin-bottom: 1rem;
+display: inline-block;
+margin-bottom: 0.5rem;
+width: 45%;
 text-align: center;
-background:none;
-padding-bottom: 0;
+.answer{
+color: #6e6464;
+font-size: 4vw;
+margin-bottom: 1rem;
+// text-align: center;
+
+.rank{
+margin: 0 auto;
+padding: 0.2rem;
+width: 90%;
+margin-bottom: 0.5vh;
+font-weight: bold;
+border-radius: 0.4rem;        /* CSS3草案 */
+-webkit-border-radius: 0.4rem;    /* Safari,Google Chrome用 */
+-moz-border-radius: 0.4rem;   /* Firefox用 */
+
+background-color: #981c1c;
+color: #fff;
+text-align: center;
+}
+
+.vote{
+font-family: "rii"
+}
+
+}
+.img{
+vertical-align: bottom;
+margin: 0 auto;
+height: 18vh;
+width: 100%;
+// background: red;
+overflow:hidden;
+
+img  {
+max-width: 100%;
+max-height: 100%;
+width: auto;
+height: auto;
+// background: red;
+}
+}
+
+}
+}
+
+
+@media only screen and (min-width: 640px){
+ul.answer_list {
+  margin-top: 20px;
+li{
+width: 33%;
+display: block;
+float: left;
+p {
+font-size: 24px;
+
+}
+.img{
+height: 185px;
+img{vertical-align: bottom;}
+}
+}
+}
+
 }
