--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -1,27 +1,27 @@
-<div class ="answer inner">
+<div class ="inner">
     <h2><%= @question.text %>戦国武将回答一覧</h2>
 
-
+<ul class="answer_list">
           <% if @answers.present? %>
 
             <% @ranking.each.with_index(1) do |rank, i| %>
             <li>
-            <p>
-              <span><%= i %></span>位　<%= rank[:samurai_name] %> <%= rank[:vote_num] %>票<br>
-              <!-- <img src="<%= rank[:samurai_img] %>" alt=""> -->
-            </p>
+            <div class="answer">
+              <p class="rank"><%= i %>位</p>
 
+            <p class="img">
+              <img src="<%= rank[:samurai_img] %>" alt="">
+            </p>
+            <p class="vote"><%= rank[:samurai_name] %> <%= rank[:vote_num] %>票</p>
+</div>
             </li>
 
             <% end %>
-
+</ul>
             <% else %>
               <p>まだ投稿がありません。</p>
             <% end %>
 
-
-
-
-          <p class="btn"><a href="/">一番最初のページに戻る</a></p>
+          <p class="btn"><a href="/questions">ランキング一覧ページに戻る</a></p>
 
 </div>
