--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,4 @@
-<div class ="inner">
+<div class ="inner inner_vote">
      <h2><%= @question.text %>戦国武将は？</h2>
 
       <%= form_for @answer, url:question_answers_path(params[:id]) do |f| %>
@@ -14,3 +14,7 @@
       <p class="btn"><%= link_to '回答せずに結果を見る', "/questions/#{@question.id}/answers", method: :get %></p>
 
 </div>
+
+<script type="text/javascript">
+
+</script>
